tests/snapshots/integration_tests__middleware_const_labels.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.duration",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                        Label(
                            "label1",
                            "value1",
                        ),
                        Label(
                            "label2",
                            "value2",
                        ),
                    ],
                    hashed: true,
                    hash: 8563260538785848257,
                },
            ),
            Some(
                Seconds,
            ),
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [
                    [VALUE],
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.body.size",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                        Label(
                            "label1",
                            "value1",
                        ),
                        Label(
                            "label2",
                            "value2",
                        ),
                    ],
                    hashed: true,
                    hash: 13116387298958882600,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.response.body.size",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "/health_check",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "200",
                        ),
                        Label(
                            "label1",
                            "value1",
                        ),
                        Label(
                            "label2",
                            "value2",
                        ),
                    ],
                    hashed: true,
                    hash: 4730924353220142260,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
    ],
)
