tests/snapshots/integration_tests__middleware_with_mask_unmatched_pattern.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.duration",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "UNKNOWN",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "404",
                        ),
                    ],
                    hashed: true,
                    hash: 4568020080277210371,
                },
            ),
            Some(
                Seconds,
            ),
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [
                    [VALUE],
                ],
            ),
        ),
        (
            CompositeKey(
                Counter,
                Key {
                    name: KeyName(
                        "http.requests.total",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "UNKNOWN",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "404",
                        ),
                    ],
                    hashed: true,
                    hash: 789248319690464860,
                },
            ),
            None,
            Some(
                "Total number of HTTP requests",
            ),
            Counter(
                1,
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.body.size",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "UNKNOWN",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "404",
                        ),
                    ],
                    hashed: true,
                    hash: 2007136165616021377,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.response.body.size",
                    ),
                    labels: [
                        Label(
                            "endpoint",
                            "UNKNOWN",
                        ),
                        Label(
                            "method",
                            "GET",
                        ),
                        Label(
                            "status",
                            "404",
                        ),
                    ],
                    hashed: true,
                    hash: 12066213246522278237,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
    ],
)
