tests/snapshots/integration_tests__middleware_with_mixed_params_cardinality-2.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Gauge,
                Key {
                    name: KeyName(
                        "http.server.active_requests",
                    ),
                    labels: [
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "url.scheme",
                            "http",
                        ),
                    ],
                    hashed: true,
                    hash: 1764143306982493858,
                },
            ),
            None,
            Some(
                "Number of active HTTP server requests.",
            ),
            Gauge(
                0.0,
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.duration",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/foo/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 4456677003677157170,
                },
            ),
            Some(
                Seconds,
            ),
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.body.size",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/foo/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 793939324985072233,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.response.body.size",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/foo/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 6603834079699411526,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.duration",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/{cheap}/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "404",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 8595920269553803119,
                },
            ),
            Some(
                Seconds,
            ),
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [
                    [VALUE],
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.body.size",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/{cheap}/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "404",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 1281383842019352288,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.response.body.size",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/{cheap}/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "404",
                        ),
                        Label(
                            "network.protocol.version",
                            "HTTP/1.1",
                        ),
                    ],
                    hashed: true,
                    hash: 8581359603361199868,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
    ],
)
