tests/snapshots/integration_tests__middleware_with_mixed_params_cardinality.snap
---
source: tests/integration_tests.rs
expression: snapshot
---
Snapshot(
    [
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.duration",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/foo/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 10885268214897628938,
                },
            ),
            Some(
                Seconds,
            ),
            Some(
                "HTTP request duration in seconds for all requests",
            ),
            Histogram(
                [
                    [VALUE],
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.request.body.size",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/foo/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 4178499132880962321,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP request size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
        (
            CompositeKey(
                Histogram,
                Key {
                    name: KeyName(
                        "http.server.response.body.size",
                    ),
                    labels: [
                        Label(
                            "http.route",
                            "/resource/foo/{expensive}",
                        ),
                        Label(
                            "http.request.method",
                            "GET",
                        ),
                        Label(
                            "http.response.status_code",
                            "200",
                        ),
                    ],
                    hashed: true,
                    hash: 15749439550269524233,
                },
            ),
            Some(
                Bytes,
            ),
            Some(
                "HTTP response size in bytes for all requests",
            ),
            Histogram(
                [
                    0.0,
                ],
            ),
        ),
    ],
)
